Test related to the BookService fixed, all running